--- a/Preferences/AstroPlannerV2-W32.prefs
+++ b/Preferences/AstroPlannerV2-W32.prefs
@@ -1399,7 +1399,34 @@ StripingColour=15790320
 TextFont=System
 TextSize=11
 VerticalGrid=6
+[LBA-128]
+HorizontalGrid=1
+nColumns=0
+RowHeight=16
+Striping=1
+StripingColour=15790320
+TextFont=System
+TextSize=11
+VerticalGrid=6
+[LBA-129]
+HorizontalGrid=1
+nColumns=0
+RowHeight=16
+Striping=1
+StripingColour=15790320
+TextFont=System
+TextSize=11
+VerticalGrid=6
 [LBA-12]
+HorizontalGrid=1
+nColumns=0
+RowHeight=16
+Striping=1
+StripingColour=15790320
+TextFont=System
+TextSize=11
+VerticalGrid=6
+[LBA-130]
 HorizontalGrid=1
 nColumns=0
 RowHeight=16
@@ -2838,7 +2865,7 @@ ufSplitter=0
 Width=1600
 [MW19]
 AttachmentsSplitterPosition=317
-CurrentFixDate=3596212816
+CurrentFixDate=3596317453
 DSSrecall.n=2
 DSSRecallA.0=54
 DSSRecallA.1=60
@@ -2885,27 +2912,27 @@ DSSRecallB.9=Constellation: Ursa Minor
 FixDate=1
 FixDateGMT=0
 GUID=3595796608
-Height=817
-Left=0
-Maximised=1
-NotesUDFSplitterPosition=1360
+Height=650
+Left=62
+Maximised=0
+NotesUDFSplitterPosition=953
 ObjectListNumber=60
-ObjectsObsSplitterPosition=471
+ObjectsObsSplitterPosition=304
 ObjectUFCol=
 ObsFilesUFCol=
 ObsUFCol=False,35,212
-ObsVerticalSplitterPosition=237
+ObsVerticalSplitterPosition=214
 OVScroll=0
 PlanningListNumber=0
 PVScroll=0
-SessionObsSplitterPosition=288
-SessionUDFNotesSplitterPosition=0
-SessionUFCol=False,35,112
+SessionObsSplitterPosition=268
+SessionUDFNotesSplitterPosition=818
+SessionUFCol=True,35,109
 ShowEditingFields=0
 TitleUFCol=
-Top=43
+Top=81
 ufSplitter=0
-Width=1600
+Width=1193
 [MW1]
 AttachmentsSplitterPosition=0
 CurrentFixDate=3589389003
@@ -3520,26 +3547,26 @@ visible.6=1
 visible.7=1
 visible.8=1
 visible.9=1
-width.0=50
-width.1=50
-width.10=50
-width.11=50
-width.12=50
-width.13=50
-width.14=50
-width.15=50
-width.16=50
-width.17=50
-width.18=50
+width.0=32
+width.1=125
+width.10=115
+width.11=90
+width.12=44
+width.13=232
+width.14=40
+width.15=62
+width.16=40
+width.17=44
+width.18=10
 width.19=50
-width.2=50
-width.3=50
-width.4=50
-width.5=50
-width.6=50
-width.7=50
-width.8=50
-width.9=50
+width.2=141
+width.3=139
+width.4=39
+width.5=73
+width.6=58
+width.7=167
+width.8=54
+width.9=109
 [olistDefaultb]
 CW=
 n=-1
@@ -3802,7 +3829,7 @@ BPRejectAltValue=15
 BPRejectMag=0
 BPRejectMagValue=3
 BugPrivacy=1
-BugResponse1=1
+BugResponse1=8
 CacheAAVSOCharts=1
 CacheAAVSOConstellations=1
 CacheDSSImages=0
@@ -3978,15 +4005,15 @@ LastGRBChoice=0
 lastGRBdate=0
 LastMPChoice=0
 LastMPCORBIndex=0
-lastNewsDate=2017-12-12 22:17:18
+lastNewsDate=2017-12-21 01:35:43
 LastObsExportDateTime=2017/12/12
 lastPaidMsg=2017/08/27
-LastRunDate=2017/12/14
+LastRunDate=2017/12/21
 lastScriptUsed=
 LastSupernovaChoice=0
 LastVersionCheck=<!DOCTYPE
 lastVersionUsed=2.2
-LastWindowMaximised=1
+LastWindowMaximised=0
 LEDBarEnabled0=1
 LEDBarEnabled1=1
 LEDBarEnabled10=1
@@ -4052,7 +4079,10 @@ ListAppearance124=list.Filters
 ListAppearance125=list.Imagers and Imaging Sensors
 ListAppearance126=MeridianList.GroupBox1.Drift Alignment Helper
 ListAppearance127=EasternList.HorGroupBox.Drift Alignment Helper
+ListAppearance128=catlist.GroupBox3.Update Observation Fields
+ListAppearance129=list.Edit User Fields
 ListAppearance13=BestPairList.BPGroupBox.MainWindow
+ListAppearance130=recent.Add Observation to Session
 ListAppearance14=SessionUserFields.SessionGroupBox.MainWindow
 ListAppearance15=ObservationsList.Tabs.MainWindow
 ListAppearance16=ResourceList._ObsGeneralContainer.vObservationResourceList.MainWindow
@@ -4197,7 +4227,7 @@ ObsFaRCase=0
 ObsFaRFind=
 ObsFaRReplace=
 obsTab=1
-ObsUFCol=
+ObsUFCol=False,60,548
 OCColourPoints=0
 OCInvertYScale=0
 OCPhasePeriod=50
@@ -4314,7 +4344,7 @@ SeeingScale=0
 SelectedChart=
 SeqFromZero=0
 SessionAutoTrim=1
-SessionColumnWidthsb=50, 50, 50, 50, 50, 50, 50, 50, 50, 50
+SessionColumnWidthsb=102, 50, 50, 50, 50, 50, 50, 50, 50, 50, 10
 SessionFaRCase=0
 SessionFaRFind=
 SessionFaRReplace=
@@ -4323,7 +4353,7 @@ SessionPadding1=15
 sessionSortColumn=-1
 sessionSortColumnDir=-1
 SessionTimeType=0
-SessionUFCol=
+SessionUFCol=False,84,150
 SessionUT=2
 ShowAltAz=1
 ShowConstellationChart=1
@@ -4641,7 +4671,21 @@ TextAppearance269=EyepiecesApparentFoV.Tabs.Resources
 TextAppearance27=ObjectRAh.ObjectEditingGroup.MainWindow
 TextAppearance270=ftext.bg.Filters
 TextAppearance271=ftext.bg.Imagers and Imaging Sensors
+TextAppearance272=fldTitle._UserFieldDialog.editor.Edit User Fields
+TextAppearance273=fldIntUnits.fldPanel.Edit User Fields
+TextAppearance274=fldIntRangeTo.fldPanel.Edit User Fields
+TextAppearance275=fldIntRangeFrom.fldPanel.Edit User Fields
+TextAppearance276=fldDblRangeTo.fldPanel.Edit User Fields
+TextAppearance277=fldDblRangeFrom.fldPanel.Edit User Fields
+TextAppearance278=fldDblUnits.fldPanel.Edit User Fields
+TextAppearance279=fldDecPts.fldPanel.Edit User Fields
 TextAppearance28=ObjectRAm.ObjectEditingGroup.MainWindow
+TextAppearance280=fldChoices.fldPanel.Edit User Fields
+TextAppearance281=CurrJulian.Fixed Date/Time
+TextAppearance282=problem.Application Exception
+TextAppearance283=description.Application Exception
+TextAppearance284=username.Application Exception
+TextAppearance285=useremail.Application Exception
 TextAppearance29=ObjectRAs.ObjectEditingGroup.MainWindow
 TextAppearance3=SiteName.tabs.Setup Wizard
 TextAppearance30=ObjectDecd.ObjectEditingGroup.MainWindow
@@ -4745,7 +4789,7 @@ VSP_MarkVariables=0
 VSP_North=0
 VSP_Resolution=100
 VSP_UseDSS=0
-WindowSplitterPosition=258
+WindowSplitterPosition=301
 xrefCatList=0
 xrefCoordMatch=1
 xrefID=
@@ -4890,9 +4934,9 @@ visible.6=1
 visible.7=1
 visible.8=1
 visible.9=1
-width.0=50
+width.0=102
 width.1=50
-width.10=50
+width.10=10
 width.2=50
 width.3=50
 width.4=50
@@ -4916,7 +4960,7 @@ Names.n=1
 h=900
 height0=239
 height1=787
-height10=709
+height10=600
 height11=208
 height12=339
 height13=400
@@ -4930,7 +4974,7 @@ height8=550
 height9=543
 left0=30
 left1=52
-left10=52
+left10=1
 left11=657
 left12=30
 left13=30
@@ -4959,7 +5003,7 @@ name8=GeneralPreferencesWindow
 name9=ImagePreferencesWindow
 top0=50
 top1=54
-top10=75
+top10=125
 top11=238
 top12=50
 top13=50
@@ -4974,7 +5018,7 @@ top9=50
 w=1600
 width0=667
 width1=1530
-width10=1540
+width10=1233
 width11=255
 width12=404
 width13=800
@@ -6132,7 +6176,91 @@ Italic=0
 TextFont=System
 TextSize=11
 Underline=0
+[TA-272]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-273]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-274]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-275]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-276]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-277]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-278]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-279]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
 [TA-27]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-280]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-281]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-282]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-283]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-284]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-285]
 Bold=0
 Italic=0
 TextFont=System
@@ -6634,7 +6762,29 @@ n=4
 [UF.Attachments]
 n=0
 [UF.Obs]
-n=0
+BGColour0=16777215
+BoolType0=0
+DecPts0=-6
+FGColour0=0
+FirstClick0=0
+From0=0
+HasBG0=0
+HasFG0=0
+IsBold0=0
+IsItalic0=0
+IsUnderlined0=0
+n=1
+nChoices0=-1
+ScriptIsNumeric0=0
+ScriptName0=
+ScriptParameter0=
+Title0=image_url
+To0=0
+ToolTip0=url to image
+Type0=5
+Units0=
+UseFrom0=0
+UseTo0=0
 [UF.PlanUF]
 n=0
 [UF.Resource.0]
@@ -6652,7 +6802,51 @@ n=0
 [UF.Resource.6]
 n=0
 [UF.Session]
-n=0
+BGColour0=16777215
+BGColour1=16777215
+BoolType0=0
+BoolType1=0
+DecPts0=-6
+DecPts1=-6
+FGColour0=0
+FGColour1=0
+FirstClick0=0
+FirstClick1=0
+From0=0
+From1=0
+HasBG0=0
+HasBG1=0
+HasFG0=0
+HasFG1=0
+IsBold0=0
+IsBold1=0
+IsItalic0=0
+IsItalic1=0
+IsUnderlined0=0
+IsUnderlined1=0
+n=2
+nChoices0=-1
+nChoices1=-1
+ScriptIsNumeric0=0
+ScriptIsNumeric1=0
+ScriptName0=
+ScriptName1=
+ScriptParameter0=
+ScriptParameter1=
+Title0=blog_url
+Title1=session_folder
+To0=0
+To1=0
+ToolTip0=
+ToolTip1=
+Type0=5
+Type1=0
+Units0=
+Units1=
+UseFrom0=0
+UseFrom1=0
+UseTo0=0
+UseTo1=0
 [UScriptString]
 0=
 1=
