--- a/Preferences/AstroPlannerV2-W32.prefs
+++ b/Preferences/AstroPlannerV2-W32.prefs
@@ -531,19 +531,22 @@ K2=DLObjects
 K3=ImageSize0
 K4=ImageSize1
 K5=ImageSizeArcmin0
-n=6
+K6=ReplaceExisting
+n=7
 V0=HST Phase 2. Visual. All sky. 1.7"/pixel.
 V0:vtype=8
-V1=0
+V1=1
 V1:vtype=11
-V2=0
+V2=1
 V2:vtype=2
 V3=6
 V3:vtype=2
-V4=2
+V4=4
 V4:vtype=2
 V5=0
 V5:vtype=5
+V6=1
+V6:vtype=11
 [DSSWindowSettings]
 n=0
 [DSS]
@@ -1439,6 +1442,51 @@ TextFont=System
 TextSize=11
 VerticalGrid=6
 [LBA-131]
+HorizontalGrid=1
+nColumns=0
+RowHeight=16
+Striping=1
+StripingColour=15790320
+TextFont=System
+TextSize=11
+VerticalGrid=6
+[LBA-132]
+HorizontalGrid=1
+nColumns=0
+RowHeight=16
+Striping=1
+StripingColour=15790320
+TextFont=System
+TextSize=11
+VerticalGrid=6
+[LBA-133]
+HorizontalGrid=1
+nColumns=0
+RowHeight=16
+Striping=1
+StripingColour=15790320
+TextFont=System
+TextSize=11
+VerticalGrid=6
+[LBA-134]
+HorizontalGrid=1
+nColumns=0
+RowHeight=16
+Striping=1
+StripingColour=15790320
+TextFont=System
+TextSize=11
+VerticalGrid=6
+[LBA-135]
+HorizontalGrid=1
+nColumns=0
+RowHeight=16
+Striping=1
+StripingColour=15790320
+TextFont=System
+TextSize=11
+VerticalGrid=6
+[LBA-136]
 HorizontalGrid=1
 nColumns=0
 RowHeight=16
@@ -2887,11 +2935,11 @@ ufSplitter=0
 Width=1000
 [MW19]
 AttachmentsSplitterPosition=0
-CurrentFixDate=3598029000
-DSSrecall.n=12
-DSSRecallA.0=63
-DSSRecallA.1=46
-DSSRecallA.10=31
+CurrentFixDate=3598117201
+DSSrecall.n=4
+DSSRecallA.0=46
+DSSRecallA.1=36
+DSSRecallA.10=21
 DSSRecallA.11=21
 DSSRecallA.12=13
 DSSRecallA.13=14
@@ -2901,18 +2949,18 @@ DSSRecallA.16=17
 DSSRecallA.17=18
 DSSRecallA.18=21
 DSSRecallA.19=22
-DSSRecallA.2=62
+DSSRecallA.2=44
 DSSRecallA.20=23
-DSSRecallA.3=37
-DSSRecallA.4=58
-DSSRecallA.5=18
-DSSRecallA.6=24
-DSSRecallA.7=7
-DSSRecallA.8=54
-DSSRecallA.9=36
-DSSRecallB.0=Constellation: Taurus
-DSSRecallB.1=1° x 1°  HST Phase 2
-DSSRecallB.10=Constellation: Puppis
+DSSRecallA.3=34
+DSSRecallA.4=18
+DSSRecallA.5=24
+DSSRecallA.6=7
+DSSRecallA.7=54
+DSSRecallA.8=36
+DSSRecallA.9=31
+DSSRecallB.0=1° x 1°  1st Gen All Sky
+DSSRecallB.1=45' x 45'  HST Phase 2
+DSSRecallB.10=Constellation: Monoceros
 DSSRecallB.11=Constellation: Monoceros
 DSSRecallB.12=Constellation: Perseus
 DSSRecallB.13=Constellation: Eridanus
@@ -2922,15 +2970,15 @@ DSSRecallB.16=Constellation: Orion
 DSSRecallB.17=Constellation: Taurus
 DSSRecallB.18=Constellation: Orion
 DSSRecallB.19=Constellation: Orion
-DSSRecallB.2=Constellation: Monoceros
+DSSRecallB.2=30' x 30'  HST Phase 2
 DSSRecallB.20=Constellation: Orion
-DSSRecallB.3=1° x 1°  HST Phase 2
-DSSRecallB.4=1° x 1°  HST Phase 2
-DSSRecallB.5=Constellation: Perseus
-DSSRecallB.6=Constellation: Puppis
-DSSRecallB.7=Constellation: Columba
-DSSRecallB.8=Constellation: Hydra
-DSSRecallB.9=Constellation: Andromeda
+DSSRecallB.3=35' x 35'  HST Phase 2
+DSSRecallB.4=Constellation: Perseus
+DSSRecallB.5=Constellation: Puppis
+DSSRecallB.6=Constellation: Columba
+DSSRecallB.7=1° x 1°  HST Phase 2
+DSSRecallB.8=45' x 45'  HST Phase 2
+DSSRecallB.9=45' x 45'  HST Phase 2
 FixDate=1
 FixDateGMT=0
 GUID=3597381719
@@ -2938,17 +2986,17 @@ Height=817
 Left=0
 Maximised=1
 NotesUDFSplitterPosition=1360
-ObjectListNumber=36
-ObjectsObsSplitterPosition=0
+ObjectListNumber=44
+ObjectsObsSplitterPosition=391
 ObjectUFCol=
 ObsFilesUFCol=
 ObsUFCol=
-ObsVerticalSplitterPosition=0
+ObsVerticalSplitterPosition=211
 OVScroll=0
 PlanningListNumber=0
 PVScroll=0
-SessionObsSplitterPosition=0
-SessionUDFNotesSplitterPosition=0
+SessionObsSplitterPosition=268
+SessionUDFNotesSplitterPosition=818
 SessionUFCol=
 ShowEditingFields=0
 TitleUFCol=
@@ -3979,7 +4027,7 @@ CheckForBadPlanField.a=1
 CloseLastPlanDoc=0
 Cometpath=
 COMETreclength=1
-ConstellationChartDisplay=2
+ConstellationChartDisplay=0
 ConstellationFigures=0
 ConstellationIndicatorFlipH=0
 ConstellationIndicatorFlipV=0
@@ -4015,14 +4063,14 @@ DoDomeWorks=0
 DomeWorksFilePath=$~$C:\Users\tonyg\AppData\Roaming\AstroPlanner\Telescope Position.txt
 DomeWorksRate=2
 DoPlanBackups=0
-DSSAnnotate=0
+DSSAnnotate=1
 DSSAnnotateColour=8355711
 DSSAutoContrast=0
 DSSCacheLocation=
 DSSCacheLocation1=
 DSSImageQuality=90
 DSSMarkCentre=1
-DSSObjectClick=5
+DSSObjectClick=6
 DSSOrientateFlip=1
 DSSOrientateRotate=1
 dssReplaceExisting=0
@@ -4141,7 +4189,7 @@ LastGRBChoice=0
 lastGRBdate=0
 LastMPChoice=0
 LastMPCORBIndex=0
-lastNewsDate=2017-12-30 01:04:54
+lastNewsDate=2018-01-04 23:06:03
 LastObsExportDateTime=2017/12/12
 lastPaidMsg=2017/08/27
 LastRunDate=2017/12/29
@@ -4220,6 +4268,11 @@ ListAppearance129=list.Edit User Fields
 ListAppearance13=BestPairList.BPGroupBox.MainWindow
 ListAppearance130=recent.Add Observation to Session
 ListAppearance131=list.Bad Observation Plan Paths
+ListAppearance132=list.Image Download Errors
+ListAppearance133=data.Telescope Data Flow
+ListAppearance134=options.Telescope Mount
+ListAppearance135=optionListbox.editors.Telescope Mount
+ListAppearance136=limits.Telescope Mount
 ListAppearance14=SessionUserFields.SessionGroupBox.MainWindow
 ListAppearance15=ObservationsList.Tabs.MainWindow
 ListAppearance16=ResourceList._ObsGeneralContainer.vObservationResourceList.MainWindow
@@ -4825,7 +4878,12 @@ TextAppearance282=problem.Application Exception
 TextAppearance283=description.Application Exception
 TextAppearance284=username.Application Exception
 TextAppearance285=useremail.Application Exception
+TextAppearance286=optionDoubleValue.editors.Telescope Mount
+TextAppearance287=IPAddress.editors.Telescope Mount
+TextAppearance288=TCPPort.editors.Telescope Mount
+TextAppearance289=LimitValue.LimitStuff.Telescope Mount
 TextAppearance29=ObjectRAs.ObjectEditingGroup.MainWindow
+TextAppearance290=LimitAbsValue.LimitStuff.Telescope Mount
 TextAppearance3=SiteName.tabs.Setup Wizard
 TextAppearance30=ObjectDecd.ObjectEditingGroup.MainWindow
 TextAppearance31=ObjectDecm.ObjectEditingGroup.MainWindow
@@ -5103,6 +5161,7 @@ height10=600
 height11=208
 height12=339
 height13=400
+height14=471
 height2=620
 height3=404
 height4=684
@@ -5117,21 +5176,23 @@ left10=2
 left11=657
 left12=30
 left13=30
+left14=1091
 left2=84
 left3=404
 left4=208
 left5=30
-left6=31
+left6=393
 left7=101
 left8=174
 left9=194
-n=14
+n=15
 name0=CheckVersionsWindow
 name1=DownloadPlanWindow
 name10=ObservationWindow
 name11=FoVLegendWindow
 name12=ObjectNotesWindow
 name13=NotesWindow
+name14=ScopeFlowWindow
 name2=CatalogueDisplayWindow
 name3=ResultsWindow
 name4=CatalogueManagerWindow
@@ -5146,11 +5207,12 @@ top10=125
 top11=238
 top12=50
 top13=50
+top14=379
 top2=178
 top3=61
 top4=91
 top5=50
-top6=72
+top6=221
 top7=112
 top8=197
 top9=120
@@ -5161,6 +5223,7 @@ width10=1233
 width11=255
 width12=404
 width13=800
+width14=499
 width2=1168
 width3=1140
 width4=1223
@@ -6405,7 +6468,37 @@ Italic=0
 TextFont=System
 TextSize=11
 Underline=0
+[TA-286]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-287]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-288]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-289]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
 [TA-28]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-290]
 Bold=0
 Italic=0
 TextFont=System
