push next plan to next week add my first user image

--- a/Preferences/AstroPlannerV2-W32.prefs
+++ b/Preferences/AstroPlannerV2-W32.prefs
@@ -532,10 +532,11 @@ K3=ImageSize0
 K4=ImageSize1
 K5=ImageSizeArcmin0
 K6=ReplaceExisting
-n=7
+K7=ReplaceExistingWhat
+n=8
 V0=HST Phase 2. Visual. All sky. 1.7"/pixel.
 V0:vtype=8
-V1=1
+V1=0
 V1:vtype=11
 V2=1
 V2:vtype=2
@@ -545,8 +546,10 @@ V4=4
 V4:vtype=2
 V5=0
 V5:vtype=5
-V6=1
+V6=0
 V6:vtype=11
+V7=0
+V7:vtype=2
 [DSSWindowSettings]
 n=0
 [DSS]
@@ -2935,8 +2938,8 @@ ufSplitter=0
 Width=1000
 [MW19]
 AttachmentsSplitterPosition=0
-CurrentFixDate=3598117201
-DSSrecall.n=4
+CurrentFixDate=3598731001
+DSSrecall.n=10
 DSSRecallA.0=46
 DSSRecallA.1=36
 DSSRecallA.10=21
@@ -2952,12 +2955,12 @@ DSSRecallA.19=22
 DSSRecallA.2=44
 DSSRecallA.20=23
 DSSRecallA.3=34
-DSSRecallA.4=18
-DSSRecallA.5=24
-DSSRecallA.6=7
-DSSRecallA.7=54
-DSSRecallA.8=36
-DSSRecallA.9=31
+DSSRecallA.4=84
+DSSRecallA.5=122
+DSSRecallA.6=47
+DSSRecallA.7=114
+DSSRecallA.8=89
+DSSRecallA.9=88
 DSSRecallB.0=1° x 1°  1st Gen All Sky
 DSSRecallB.1=45' x 45'  HST Phase 2
 DSSRecallB.10=Constellation: Monoceros
@@ -2973,12 +2976,12 @@ DSSRecallB.19=Constellation: Orion
 DSSRecallB.2=30' x 30'  HST Phase 2
 DSSRecallB.20=Constellation: Orion
 DSSRecallB.3=35' x 35'  HST Phase 2
-DSSRecallB.4=Constellation: Perseus
-DSSRecallB.5=Constellation: Puppis
-DSSRecallB.6=Constellation: Columba
+DSSRecallB.4=1° x 1°  HST Phase 2
+DSSRecallB.5=1° x 1°  HST Phase 2
+DSSRecallB.6=1° x 1°  HST Phase 2
 DSSRecallB.7=1° x 1°  HST Phase 2
-DSSRecallB.8=45' x 45'  HST Phase 2
-DSSRecallB.9=45' x 45'  HST Phase 2
+DSSRecallB.8=1° x 1°  HST Phase 2
+DSSRecallB.9=1° x 1°  HST Phase 2
 FixDate=1
 FixDateGMT=0
 GUID=3597381719
@@ -2986,7 +2989,7 @@ Height=817
 Left=0
 Maximised=1
 NotesUDFSplitterPosition=1360
-ObjectListNumber=44
+ObjectListNumber=84
 ObjectsObsSplitterPosition=391
 ObjectUFCol=
 ObsFilesUFCol=
@@ -3000,7 +3003,7 @@ SessionUDFNotesSplitterPosition=818
 SessionUFCol=
 ShowEditingFields=0
 TitleUFCol=
-Top=43
+Top=45
 ufSplitter=0
 Width=1600
 [MW1]
@@ -3755,8 +3758,8 @@ n=-1
 [PCW]
 AdditionalDB=
 Aggressiveness1=1
-ConstDateTime=2017-12-15 20:00:00
-Constellations=Aur	Boo	Cam	Cep	Com	CrB	CVn	Dra	Hya	Leo	LMi	Lyn	UMa	UMi	Vir
+ConstDateTime=2018-01-13 08:27:00
+Constellations=
 ConstVisibility=2
 DC.0=8
 DC.1=3
@@ -3765,18 +3768,18 @@ DC.3=5
 DC.4=1
 DC.n=0
 maxObjects=100
-ObjectTypes=5	6
+ObjectTypes=3
 Observer=Astro Bagel
 ObservingDate=6
-ObservingDay=3597552838
+ObservingDay=3598680416
 ObservingEndTime=3.0166666667
 ObservingMonth=8
 ObservingSite=ENON,OH
-ObservingStartTime=19
+ObservingStartTime=18
 ObservingTimeEnd=4
 ObservingTimeStart=5
 PartiallyVisible=1
-PlanDifficulty=3
+PlanDifficulty=4
 PlanDifficultyAccumulative=1
 rejectObjects=0
 rejectObjectsReason=0
@@ -4050,7 +4053,7 @@ DefaultMWColumnsA-62=
 DefaultMWColumnsA-63=Seq^^0^^0^^0||ID^^1^^1^^100||Images^^2^^2^^50||Name^^3^^3^^100||Type^^4^^4^^98||RA^^12^^12^^72||Dec^^13^^13^^57||Azimuth^^14^^14^^51||Altitude^^15^^15^^49||Rise^^16^^16^^57||Transit^^17^^17^^57||Set^^18^^18^^57||Vis^^6^^6^^40||Obs^^24^^24^^30||Rating^^36^^36^^42||ODM^^52^^52^^36||Mag^^20^^20^^32||Mag 2^^21^^21^^41||Sep^^23^^23^^37||Diff Idx^^47^^47^^45||L Rating^^48^^48^^50||Size^^5^^5^^30||Const^^19^^19^^38||Catalogue^^28^^28^^61||Air Mass^^39^^39^^54||HJD^^49^^49^^56||Extinct^^46^^46^^43||App Mag^^45^^45^^55||Hr Angle^^40^^40^^53||Chart#^^30^^30^^43||Spect^^38^^38^^37||SB^^51^^51^^27||PosAngle^^34^^34^^56||Period^^37^^37^^41||LOC^^50^^50^^30||Transit Date^^55^^55^^68||Moon^^27^^27^^40||Sun^^26^^26^^40||Transit Alt^^56^^56^^50||User Notes^^61^^61^^64||Found^^33^^33^^40||TDist^^35^^35^^40||Prob^^31^^31^^42||Prob 2^^32^^32^^40||Par Angle^^41^^41^^55||Level^^42^^42^^35||Obsvbty^^11^^11^^51||Best Time^^7^^7^^58||Split^^43^^43^^32||G.Lat^^57^^57^^55||G.Long^^58^^58^^55||E.Lat^^59^^59^^55||E.Long^^60^^60^^55||Best EP^^54^^54^^46||Best Mag^^53^^53^^56||Split mm^^44^^44^^54||Dk Start^^8^^8^^60||Dk End^^9^^9^^60||Dk Dur^^10^^10^^60||Opposition^^25^^25^^65||Comp^^29^^29^^40||Catalogue Notes^^62^^62^^320||Best AMag^^22^^22^^55
 DefaultSiteResource=Barn ENON,OH
 DictionaryErrorColour=16711680
-DictionaryInline=1
+DictionaryInline=0
 DictionaryName=English
 DictionarySuggestions=5
 DirectSlew=0
@@ -4189,7 +4192,7 @@ LastGRBChoice=0
 lastGRBdate=0
 LastMPChoice=0
 LastMPCORBIndex=0
-lastNewsDate=2018-01-04 23:06:03
+lastNewsDate=2018-01-06 11:56:20
 LastObsExportDateTime=2017/12/12
 lastPaidMsg=2017/08/27
 LastRunDate=2017/12/29
@@ -4507,7 +4510,7 @@ RSAYAxis=0
 rsrctab0=0
 rsrctab1=3
 rsrctab2=0
-rsrctab3=0
+rsrctab3=1
 rsrctab4=0
 rsrctab5=0
 rsrctab6=0
@@ -4884,6 +4887,7 @@ TextAppearance288=TCPPort.editors.Telescope Mount
 TextAppearance289=LimitValue.LimitStuff.Telescope Mount
 TextAppearance29=ObjectRAs.ObjectEditingGroup.MainWindow
 TextAppearance290=LimitAbsValue.LimitStuff.Telescope Mount
+TextAppearance291=info.Scripting Framework Reference
 TextAppearance3=SiteName.tabs.Setup Wizard
 TextAppearance30=ObjectDecd.ObjectEditingGroup.MainWindow
 TextAppearance31=ObjectDecm.ObjectEditingGroup.MainWindow
@@ -5052,7 +5056,7 @@ EnableHighlighting=1
 FGColour=0
 FontName=Courier
 FontSize=12
-FrameworkSplitter=0
+FrameworkSplitter=345
 HighlightCodeBlocks=1
 HomeEnd=1
 IncludeInFR=0
@@ -5162,12 +5166,13 @@ height11=208
 height12=339
 height13=400
 height14=471
+height15=688
 height2=620
 height3=404
 height4=684
 height5=493
-height6=550
-height7=550
+height6=817
+height7=705
 height8=550
 height9=543
 left0=30
@@ -5177,15 +5182,16 @@ left11=657
 left12=30
 left13=30
 left14=1091
+left15=30
 left2=84
 left3=404
 left4=208
 left5=30
-left6=393
-left7=101
+left6=0
+left7=245
 left8=174
 left9=194
-n=15
+n=16
 name0=CheckVersionsWindow
 name1=DownloadPlanWindow
 name10=ObservationWindow
@@ -5193,6 +5199,7 @@ name11=FoVLegendWindow
 name12=ObjectNotesWindow
 name13=NotesWindow
 name14=ScopeFlowWindow
+name15=FrameworkDisplayWindow
 name2=CatalogueDisplayWindow
 name3=ResultsWindow
 name4=CatalogueManagerWindow
@@ -5208,12 +5215,13 @@ top11=238
 top12=50
 top13=50
 top14=379
+top15=51
 top2=178
 top3=61
 top4=91
 top5=50
-top6=221
-top7=112
+top6=43
+top7=74
 top8=197
 top9=120
 w=1600
@@ -5224,12 +5232,13 @@ width11=255
 width12=404
 width13=800
 width14=499
+width15=1016
 width2=1168
 width3=1140
 width4=1223
 width5=553
-width6=818
-width7=850
+width6=1600
+width7=1020
 width8=770
 width9=784
 [TA-0]
@@ -6499,6 +6508,12 @@ TextFont=System
 TextSize=11
 Underline=0
 [TA-290]
+Bold=0
+Italic=0
+TextFont=System
+TextSize=11
+Underline=0
+[TA-291]
 Bold=0
 Italic=0
 TextFont=System
